# fast-api-sqlalchemy-template

./: CHANGELOG.md  Dockerfile  Taskfile.yml  docker-entrypoint.sh  index.html  openapi-spec.yaml  pyproject.toml  readme.md
app/: config.py  main.py
app/api/: decks.py  sample.py
app/db/: models.py  utils.py
app/models/: decks_model.py  sample_model.py
app/schemas/: decks_schema.py  sample_schema.py
app/services/: openai_api.py
configs/docker/: docker-compose-local.yml  docker-compose-prod.yml  docker-compose-test.yml
configs/envs/: test.env
configs/nginx/: local-nginx.conf  prod-nginx.conf  test-nginx.conf
github-workflows/workflows/: main.yml
migrations/: env.py
scripts/: db_backup.sh  db_restore.sh
scripts/bash_task/: clean-docker-logs.sh
tests/decks/: conftest.py  test_cards.py  test_decks.py
